--- a/style.css
+++ b/style.css
@@ -1,3 +1,66 @@
 body {
     font-family: "Source Sans Pro", Helvetica, sans-serif;
+    font-size: 14px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
+}
+
+header {
+    height: 100px;
+    text-align: center;
+}
+
+header a {
+    padding: 0 20px;
+}
+
+footer {
+    height: 100px;
+    width: 100vw;
+    background-color: #9a802d;
+    color: white;
+    text-align: center;
+}
+
+footer a {
+    color: white;
+    text-decoration: none;
+    display: flex;
+    flex-direction: column;
+}
+
+h2 {
+    font-size: 2.5em;
+}
+h3 {
+    font-size: 1.5em;
+}
+
+main {
+    max-width: 800px;
+
+}
+
+.section {
+    padding: 10px;
+}
+.section:nth-child(odd) {
+    background-color: #fff0bf;
+}
+.section {
+    width: 100%;
+}
+
+.halfsep {
+    display: flex;
+}
+.halfsep>div {
+    width: 50%;
+}
+
+.location {
+    font-style: oblique;
+    color: peru;
 }
